<resources>
    <string name="app_name">SmartAlarm</string>

    <string name="action_settings">Settings</string>
    <string name="action_theme">Dark Mode On</string>
    <string name="action_about">About</string>

    <string name="dialog_title">Set alarm</string>


    <string name="snackbar_undo_action">UNDO</string>
    <string name="snackbar_message">Alarm deleted</string>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="environment_header">Environment</string>
    <string name="alarm_header">Alarm</string>

    <!-- Messages Preferences -->
    <string name="theme_title">Theme</string>
    <string name="time_title">Time format</string>

    <!-- Sync Preferences -->
    <string name="vibration_title">Vibrate during the ringing</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="monday_char">M</string>
    <string name="tuesday_char">T</string>
    <string name="wednesday_char">W</string>
    <string name="thursday_char">T</string>
    <string name="friday_char">F</string>
    <string name="saturday_char">S</string>
    <string name="sunday_char">S</string>

    <string name="monday_abbreviation">Mon</string>
    <string name="tuesday_abbreviation">Tue</string>
    <string name="wednesday_abbreviation">Wed</string>
    <string name="thursday_abbreviation">Thu</string>
    <string name="friday_abbreviation">Fri</string>
    <string name="saturday_abbreviation">Sat</string>
    <string name="sunday_abbreviation">Sun</string>

    <string name="colon">:</string>
    <string name="seconds_default">00</string>
    <string name="name">Name</string>
    <string name="dismiss_button">Dismiss</string>
    <string name="snooze">Snooze</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>