<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAlarmActivity">

    <TimePicker
        android:id="@+id/time_setter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/configuration_recycler"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/configuration_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/setter_margin"
        app:layout_constraintBottom_toTopOf="@id/done_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time_setter"
        android:animateLayoutChanges="true">

        <EditText
            android:id="@+id/name_setter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:imeOptions="actionSend"
            android:inputType="textCapSentences" />

        <Spinner
            android:id="@+id/alarm_modes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setter_margin" />

        <LinearLayout
            android:id="@+id/days_setter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/setter_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/monday_toggle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Monday"
                android:textOff="@string/monday_char"
                android:textOn="@string/monday_char" />

            <ToggleButton
                android:id="@+id/tuesday_toggle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Tuesday"
                android:textOff="@string/tuesday_char"
                android:textOn="@string/tuesday_char" />

            <ToggleButton
                android:id="@+id/wednesday_toggle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Wednesday"
                android:textOff="@string/wednesday_char"
                android:textOn="@string/wednesday_char" />

            <ToggleButton
                android:id="@+id/thursday_toggle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Thursday"
                android:textOff="@string/thursday_char"
                android:textOn="@string/thursday_char" />

            <ToggleButton
                android:id="@+id/friday_toggle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Monday"
                android:textOff="@string/friday_char"
                android:textOn="@string/friday_char" />

            <ToggleButton
                android:id="@+id/saturday_toggle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="Monday"
                android:textOff="@string/saturday_char"
                android:textOn="@string/saturday_char" />

            <ToggleButton
                android:id="@+id/sunday_toggle"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="Monday"
                android:textOff="@string/sunday_char"
                android:textOn="@string/sunday_char" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setter_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="It's going to ring" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="more time, every" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="2"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="minutes" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="buttonsListener"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/done_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_button" />
</androidx.constraintlayout.widget.ConstraintLayout>